--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 	},
 	"type": "module",
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^8.46.2",
+		"@typescript-eslint/parser": "^8.46.2",
+		"eslint": "^9.38.0",
 		"prettier": "^3.6.2"
 	}
 }
