--- a/packages/ramsBackend/package.json
+++ b/packages/ramsBackend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.18.0",
+		"fastify": "^5.6.1",
 		"typescript": "~5.9.3"
 	},
 	"devDependencies": {
@@ -18,5 +19,6 @@
 		"dotenv-cli": "^7.4.2",
 		"prisma": "^6.18.0",
 		"tsx": "^4.20.6"
-	}
+	},
+	"type": "module"
 }
