--- a/packages/ramsClient/package.json
+++ b/packages/ramsClient/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "ramsclient",
 	"private": true,
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -8,6 +9,12 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mantine/core": "^8.3.6",
+		"@mantine/dates": "^8.3.6",
+		"@mantine/form": "^8.3.6",
+		"@mantine/hooks": "^8.3.6",
+		"@tabler/icons-react": "^3.35.0",
+		"dayjs": "^1.11.19",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1"
 	},
@@ -16,7 +23,9 @@
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@vitejs/plugin-react": "^5.0.4",
-		"babel-plugin-react-compiler": "^19.1.0-rc.3",
+		"postcss": "^8.5.6",
+		"postcss-preset-mantine": "^1.18.0",
+		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.9.3",
 		"vite": "^7.1.7"
 	}
