--- a/packages/ramsClient/tsconfig.json
+++ b/packages/ramsClient/tsconfig.json
@@ -8,7 +8,10 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"noEmit": true,
-		"types": ["vite/client", "node"]
+		"types": ["vite/client", "node"],
+		"paths": {
+			"@insta/ramsbackend/*": ["../ramsBackend/*"]
+		}
 	},
 	"include": ["src", "vite.config.ts"]
 }
