Refactor ramsClient and ramsBackend: migrate API types to shared package, update imports for personnel and factory data structures, and enhance type safety with DTOs.

--- a/packages/ramsClient/package.json
+++ b/packages/ramsClient/package.json
@@ -9,7 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@insta/ramsbackend": "workspace:*",
+		"@insta/shared": "workspace:*",
 		"@mantine/core": "^8.3.6",
 		"@mantine/dates": "^8.3.6",
 		"@mantine/form": "^8.3.6",
