--- a/packages/ramsBackend/tsconfig.json
+++ b/packages/ramsBackend/tsconfig.json
@@ -6,6 +6,9 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"paths": {
+			"@insta/shared": ["../shared/src/index.ts"]
+		}
 	}
 }
