--- a/packages/ramsClient/tsconfig.json
+++ b/packages/ramsClient/tsconfig.json
@@ -10,7 +10,7 @@
 		"noEmit": true,
 		"types": ["vite/client", "node"],
 		"paths": {
-			"@insta/ramsbackend/*": ["../ramsBackend/*"]
+			"@insta/shared": ["../shared/src/index.ts"]
 		}
 	},
 	"include": ["src", "vite.config.ts"]
