--- a/packages/ramsClient/package.json
+++ b/packages/ramsClient/package.json
@@ -14,6 +14,7 @@
 		"@mantine/dates": "^8.3.6",
 		"@mantine/form": "^8.3.6",
 		"@mantine/hooks": "^8.3.6",
+		"@mantine/modals": "^8.3.6",
 		"@tabler/icons-react": "^3.35.0",
 		"@tanstack/react-query": "^5.90.5",
 		"axios": "^1.13.1",
